Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2925464 by drunken monkey, borisson_, .jch: Fixed problem with missing "NOT
  NULL" attribute in database backend.
- #2953266 by drunken monkey, borisson_: Added a helper method for
  "selected"/"default" checks.
- #2953267 by drunken monkey, borisson_: Fixed REST dependency of Views test
  module.
- #2945870 by Dropa, drunken monkey: Fixed timezone of indexed date strings.
- #2948659 by drunken monkey, borisson_, bskibinski: Added support for HTML5
  placeholder in Views exposed filters.
- #2951055 by bradjones1, borisson_, drunken monkey: Fixed documentation for
  IndexInterface::addField().
- #2945560 by mkalkbrenner, drunken monkey, borisson_: Fixed handling of
  existing highlighting data in Highlight processor.
- #2946386 by drunken monkey, borisson_: Fixed typo in Query::getAbortMessage().
- #2945675 by drunken monkey, borisson_: Unified use of self and static.

Search API 1.7 (2018-02-23):
----------------------------
- #2922525 by drunken monkey, borisson_: Changed "Index items immediately" to
  delay indexing until the end of the page request.
- #2930720 by drunken monkey, borisson_: Added a UI for rebuilding the tracking
  table for an index.
- #2912246 by drunken monkey: Fixed inconsistent array indices in query
  languages.
- #2939405 by bserem, borisson_, drunken monkey, yoroy: Improved UI text on
  what is included in the index.
- #2943705 by kevin.dutra, drunken monkey, borisson_: Fixed performance
  problems with LIFO tracker.
- #2942846 by idebr, drunken monkey, borisson_: Added empty/not empty operators
  to Views fulltext field filters.
- #2940255 by drunken monkey: Updated the DB autocomplete implementation to the
  stable API version.
- #2938646 by drunken monkey, Johnny vd Laar: Fixed item-boosts in database
  backend.
- #2939085 by mattgill, drunken monkey: Fixed fatal error in Views when trying
  to set keywords conjunction on aborted query.