@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2955887 by drunken monkey, borisson_: Added a way to re-execute a query.
 - #2925464 by drunken monkey, borisson_, .jch: Fixed problem with missing "NOT
   NULL" attribute in database backend.
 - #2953266 by drunken monkey, borisson_: Added a helper method for
